; ModuleID = '/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_kern.c_kmem_malloc_domainset.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_kern.c_kmem_malloc_domainset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.domainset = type { i32 }
%struct.vm_domainset_iter = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @kmem_malloc_domainset(%struct.domainset* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.domainset*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.vm_domainset_iter, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store %struct.domainset* %0, %struct.domainset** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %10 = load %struct.domainset*, %struct.domainset** %4, align 8
  %11 = call i32 @vm_domainset_iter_policy_init(%struct.vm_domainset_iter* %7, %struct.domainset* %10, i32* %9, i32* %6)
  br label %12

12:                                               ; preds = %21, %3
  %13 = load i32, i32* %9, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i64 @kmem_malloc_domain(i32 %13, i32 %14, i32 %15)
  store i64 %16, i64* %8, align 8
  %17 = load i64, i64* %8, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %12
  br label %24

20:                                               ; preds = %12
  br label %21

21:                                               ; preds = %20
  %22 = call i64 @vm_domainset_iter_policy(%struct.vm_domainset_iter* %7, i32* %9)
  %23 = icmp eq i64 %22, 0
  br i1 %23, label %12, label %24

24:                                               ; preds = %21, %19
  %25 = load i64, i64* %8, align 8
  ret i64 %25
}

declare dso_local i32 @vm_domainset_iter_policy_init(%struct.vm_domainset_iter*, %struct.domainset*, i32*, i32*) #1

declare dso_local i64 @kmem_malloc_domain(i32, i32, i32) #1

declare dso_local i64 @vm_domainset_iter_policy(%struct.vm_domainset_iter*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
